--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -13,79 +13,35 @@ services:
 
   bridge:
     build:
-      context: ../
-      dockerfile: docker/Dockerfile
-    image: kiendn60302/bridge
+      context: ..
+      dockerfile: Dockerfile
     container_name: bridge
     restart: always
     environment:
-      - RONIN_RPC=${RONIN_RPC}
-      - RONIN_VALIDATOR_KEY=${RONIN_VALIDATOR_KEY}
-      - RONIN_RELAYER_KEY=${RONIN_RELAYER_KEY}
-      - ETHEREUM_RPC=${ETHEREUM_RPC}
-      - ETHEREUM_VALIDATOR_KEY=${ETHEREUM_VALIDATOR_KEY}
-      - ETHEREUM_RELAYER_KEY=${ETHEREUM_RELAYER_KEY}
-      - DB_HOST=${DB_HOST}
-      - DB_NAME=${DB_NAME}
-      - DB_PORT=${DB_PORT}
-      - DB_USERNAME=${DB_USERNAME}
-      - DB_PASSWORD=${DB_PASSWORD}
       - VERBOSITY=${VERBOSITY}
       - CONFIG_PATH=${CONFIG_PATH}
-      - DB_MAX_OPEN_CONNS=${DB_MAX_OPEN_CONNS}
-      - RONIN_TASK_INTERVAL=${RONIN_TASK_INTERVAL}
-      - RONIN_TRANSACTION_CHECK_PERIOD=${RONIN_TRANSACTION_CHECK_PERIOD}
-      - RONIN_MAX_PROCESSING_TASKS=${RONIN_MAX_PROCESSING_TASKS}
-      - ETHEREUM_GET_LOGS_BATCH_SIZE=${ETHEREUM_GET_LOGS_BATCH_SIZE}
-      - RONIN_VALIDATOR_KMS_KEY_TOKEN_PATH=${RONIN_VALIDATOR_KMS_KEY_TOKEN_PATH}
-      - RONIN_VALIDATOR_KMS_SSL_CERT_PATH=${RONIN_VALIDATOR_KMS_SSL_CERT_PATH}
-      - RONIN_VALIDATOR_KMS_SERVER_ADDR=${RONIN_VALIDATOR_KMS_SERVER_ADDR}
-      - RONIN_VALIDATOR_KMS_SOURCE_ADDR=${RONIN_VALIDATOR_KMS_SOURCE_ADDR}
-      - RONIN_VALIDATOR_KMS_SIGN_TIMEOUT=${RONIN_VALIDATOR_KMS_SIGN_TIMEOUT}
-      - RONIN_RELAYER_KMS_KEY_TOKEN_PATH=${RONIN_RELAYER_KMS_KEY_TOKEN_PATH}
-      - RONIN_RELAYER_KMS_SSL_CERT_PATH=${RONIN_RELAYER_KMS_SSL_CERT_PATH}
-      - RONIN_RELAYER_KMS_SERVER_ADDR=${RONIN_RELAYER_KMS_SERVER_ADDR}
-      - RONIN_RELAYER_KMS_SOURCE_ADDR=${RONIN_RELAYER_KMS_SOURCE_ADDR}
-      - RONIN_RELAYER_KMS_SIGN_TIMEOUT=${RONIN_RELAYER_KMS_SIGN_TIMEOUT}
-      - ETHEREUM_VALIDATOR_KMS_KEY_TOKEN_PATH=${ETHEREUM_VALIDATOR_KMS_KEY_TOKEN_PATH}
-      - ETHEREUM_VALIDATOR_KMS_SSL_CERT_PATH=${ETHEREUM_VALIDATOR_KMS_SSL_CERT_PATH}
-      - ETHEREUM_VALIDATOR_KMS_SERVER_ADDR=${ETHEREUM_VALIDATOR_KMS_SERVER_ADDR}
-      - ETHEREUM_VALIDATOR_KMS_SOURCE_ADDR=${ETHEREUM_VALIDATOR_KMS_SOURCE_ADDR}
-      - ETHEREUM_VALIDATOR_KMS_SIGN_TIMEOUT=${ETHEREUM_VALIDATOR_KMS_SIGN_TIMEOUT}
-      - ETHEREUM_RELAYER_KMS_KEY_TOKEN_PATH=${ETHEREUM_RELAYER_KMS_KEY_TOKEN_PATH}
-      - ETHEREUM_RELAYER_KMS_SSL_CERT_PATH=${ETHEREUM_RELAYER_KMS_SSL_CERT_PATH}
-      - ETHEREUM_RELAYER_KMS_SERVER_ADDR=${ETHEREUM_RELAYER_KMS_SERVER_ADDR}
-      - ETHEREUM_RELAYER_KMS_SOURCE_ADDR=${ETHEREUM_RELAYER_KMS_SOURCE_ADDR}
-      - ETHEREUM_RELAYER_KMS_SIGN_TIMEOUT=${ETHEREUM_RELAYER_KMS_SIGN_TIMEOUT}
+      - LISTENERS__RONIN__CONFIG__RPCURL=${LISTENERS__RONIN__CONFIG__RPCURL}
+      - LISTENERS__RONIN__CONFIG__SECRET__BRIDGEOPERATOR__PLAINPRIVATEKEY=${LISTENERS__RONIN__CONFIG__SECRET__BRIDGEOPERATOR__PLAINPRIVATEKEY}
+      - LISTENERS__RONIN__CONFIG__TASKINTERVAL=${LISTENERS__RONIN__CONFIG__TASKINTERVAL}
+      - LISTENERS__RONIN__CONFIG__TRANSACTIONCHECKPERIOD=${LISTENERS__RONIN__CONFIG__TRANSACTIONCHECKPERIOD}
+      - LISTENERS__RONIN__CONFIG__FROMHEIGHT=${LISTENERS__RONIN__CONFIG__FROMHEIGHT}
+      - LISTENERS__RONIN__CONFIG__GASLIMITBUMPRATIO=${LISTENERS__RONIN__CONFIG__GASLIMITBUMPRATIO}
+      - LISTENERS__RONIN__CONFIG__MAXTASKQUERY=${LISTENERS__RONIN__CONFIG__MAXTASKQUERY}
+      - LISTENERS__RONIN__CONFIG__MAXPROCESSINGTASKS=${LISTENERS__RONIN__CONFIG__MAXPROCESSINGTASKS}
+      - LISTENERS__RONIN__STATS__NODE=${LISTENERS__RONIN__STATS__NODE}
+      - LISTENERS__RONIN__STATS__HOST=${LISTENERS__RONIN__STATS__HOST}
+      - LISTENERS__RONIN__STATS__SECRET=${LISTENERS__RONIN__STATS__SECRET}
+      - LISTENERS__ETHEREUM__CONFIG__RPCURL=${LISTENERS__ETHEREUM__CONFIG__RPCURL}
+      - LISTENERS__ETHEREUM__CONFIG__SECRET__BRIDGEOPERATOR__PLAINPRIVATEKEY=${LISTENERS__ETHEREUM__CONFIG__SECRET__BRIDGEOPERATOR__PLAINPRIVATEKEY}
+      - LISTENERS__ETHEREUM__CONFIG__GETLOGSBATCHSIZE=${LISTENERS__ETHEREUM__CONFIG__GETLOGSBATCHSIZE}
+      - DATABASE__HOST=${DATABASE__HOST}
+      - DATABASE__PORT=${DATABASE__PORT}
+      - DATABASE__NAME=${DATABASE__NAME}
+      - DATABASE__USERNAME=${DATABASE__USERNAME}
+      - DATABASE__PASSWORD=${DATABASE__PASSWORD}
+      - DATABASE__CONNMAXLIFETIME=${DATABASE__CONNMAXLIFETIME}
+      - DATABASE__MAXIDLECONNS=${DATABASE__MAXIDLECONNS}
+      - DATABASE__MAXOPENCONNS=${DATABASE__MAXOPENCONNS}
     depends_on:
       - db
-      - node
 
-  node:
-    image: kiendn60302/node
-    restart: always
-    hostname: node
-    container_name: node
-    ports:
-      - "8545:8545"
-      - "8546:8546"
-      - "30303:30303"
-      - "30303:30303/udp"
-    volumes:
-      - /Users/mac/coding/ronin/testnet1/ronin:/opt/ronin
-    environment:
-      - SYNC_MODE=${SYNC_MODE}
-      - BOOTNODES=${BOOTNODES}
-      - NETWORK_ID=${NETWORK_ID}
-      - GENESIS_PATH=${GENESIS_PATH}
-      - RPC_NODE=${RPC_NODE}
-      - DATA_DIR=${DATA_DIR}
-      - SUBSCRIBER=${SUBSCRIBER}
-      - KAFKA_URL=${KAFKA_URL}
-      - KAFKA_USERNAME=${KAFKA_USERNAME}
-      - KAFKA_PASSWORD=${KAFKA_PASSWORD}
-      - KAFKA_AUTHENTICATION_TYPE=${KAFKA_AUTHENTICATION_TYPE}
-      - VERBOSITY=${VERBOSITY}
-      - CONFIRM_BLOCK_AT=${CONFIRM_BLOCK_AT}
-      - RONIN_PARAMS=${RONIN_PARAMS}
-      - MINE=${MINE}
