--- a/config/config.testnet.json
+++ b/config/config.testnet.json
@@ -1,14 +1,14 @@
 {
   "listeners": {
-    "Ronin": {
+    "ronin": {
       "chainId": "0x7e5",
       "rpcUrl": "http://localhost:8545",
       "blockTime": 3,
       "safeBlockRange": 10,
       "maxTasksQuery": 1000,
       "minTasksQuery": 50,
-      "taskInterval": 3,
-      "transactionCheckPeriod": 5,
+      "taskInterval": "3s",
+      "transactionCheckPeriod": "5s",
       "gasLimitBumpRatio": 200,
       "secret": {
         "bridgeOperator": {
@@ -63,13 +63,13 @@
         }
       }
     },
-    "Ethereum": {
+    "ethereum": {
       "disabled": false,
       "chainId": "0x5",
       "rpcUrl": "",
       "blockTime": 15,
       "safeBlockRange": 8,
-      "transactionCheckPeriod": 15,
+      "transactionCheckPeriod": "15s",
       "secret": {
         "bridgeOperator": {
           "plainPrivateKey": ""
