nit: fix typo in Dockerfile and docker-compose

--- a/docker/.env
+++ b/docker/.env
@@ -1,8 +1,8 @@
 VERBOSITY=4
-LISTENERS__RONIN__CONFIG__RPCURL=https://saigon-testnet.roninchain.com/rpc
+LISTENERS__RONIN__RPCURL=https://saigon-testnet.roninchain.com/rpc
 DATABASE__HOST=db
 DATABASE__PORT=5432
-DATABASE__NAME=bridge
-DATABASE__USERNAME=postgres
+DATABASE__DBNAME=bridge
+DATABASE__USER=postgres
 DATABASE__PASSWORD=example
 CONFIG_PATH=ronin.testnet.yaml
