--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -20,24 +20,24 @@ services:
     environment:
       - VERBOSITY=${VERBOSITY}
       - CONFIG_PATH=${CONFIG_PATH}
-      - LISTENERS__RONIN__CONFIG__RPCURL=${LISTENERS__RONIN__CONFIG__RPCURL}
-      - LISTENERS__RONIN__CONFIG__SECRET__BRIDGEOPERATOR__PLAINPRIVATEKEY=${LISTENERS__RONIN__CONFIG__SECRET__BRIDGEOPERATOR__PLAINPRIVATEKEY}
-      - LISTENERS__RONIN__CONFIG__TASKINTERVAL=${LISTENERS__RONIN__CONFIG__TASKINTERVAL}
-      - LISTENERS__RONIN__CONFIG__TRANSACTIONCHECKPERIOD=${LISTENERS__RONIN__CONFIG__TRANSACTIONCHECKPERIOD}
-      - LISTENERS__RONIN__CONFIG__FROMHEIGHT=${LISTENERS__RONIN__CONFIG__FROMHEIGHT}
-      - LISTENERS__RONIN__CONFIG__GASLIMITBUMPRATIO=${LISTENERS__RONIN__CONFIG__GASLIMITBUMPRATIO}
-      - LISTENERS__RONIN__CONFIG__MAXTASKQUERY=${LISTENERS__RONIN__CONFIG__MAXTASKQUERY}
-      - LISTENERS__RONIN__CONFIG__MAXPROCESSINGTASKS=${LISTENERS__RONIN__CONFIG__MAXPROCESSINGTASKS}
+      - LISTENERS__RONIN__RPCURL=${LISTENERS__RONIN__RPCURL}
+      - LISTENERS__RONIN__SECRET__BRIDGEOPERATOR__PLAINPRIVATEKEY=${LISTENERS__RONIN__SECRET__BRIDGEOPERATOR__PLAINPRIVATEKEY}
+      - LISTENERS__RONIN__TASKINTERVAL=${LISTENERS__RONIN__TASKINTERVAL}
+      - LISTENERS__RONIN__TRANSACTIONCHECKPERIOD=${LISTENERS__RONIN__TRANSACTIONCHECKPERIOD}
+      - LISTENERS__RONIN__FROMHEIGHT=${LISTENERS__RONIN__FROMHEIGHT}
+      - LISTENERS__RONIN__GASLIMITBUMPRATIO=${LISTENERS__RONIN__GASLIMITBUMPRATIO}
+      - LISTENERS__RONIN__MAXTASKQUERY=${LISTENERS__RONIN__MAXTASKQUERY}
+      - LISTENERS__RONIN__MAXPROCESSINGTASKS=${LISTENERS__RONIN__MAXPROCESSINGTASKS}
       - LISTENERS__RONIN__STATS__NODE=${LISTENERS__RONIN__STATS__NODE}
       - LISTENERS__RONIN__STATS__HOST=${LISTENERS__RONIN__STATS__HOST}
       - LISTENERS__RONIN__STATS__SECRET=${LISTENERS__RONIN__STATS__SECRET}
-      - LISTENERS__ETHEREUM__CONFIG__RPCURL=${LISTENERS__ETHEREUM__CONFIG__RPCURL}
-      - LISTENERS__ETHEREUM__CONFIG__SECRET__BRIDGEOPERATOR__PLAINPRIVATEKEY=${LISTENERS__ETHEREUM__CONFIG__SECRET__BRIDGEOPERATOR__PLAINPRIVATEKEY}
-      - LISTENERS__ETHEREUM__CONFIG__GETLOGSBATCHSIZE=${LISTENERS__ETHEREUM__CONFIG__GETLOGSBATCHSIZE}
+      - LISTENERS__ETHEREUM__RPCURL=${LISTENERS__ETHEREUM__RPCURL}
+      - LISTENERS__ETHEREUM__SECRET__BRIDGEOPERATOR__PLAINPRIVATEKEY=${LISTENERS__ETHEREUM__SECRET__BRIDGEOPERATOR__PLAINPRIVATEKEY}
+      - LISTENERS__ETHEREUM__GETLOGSBATCHSIZE=${LISTENERS__ETHEREUM__GETLOGSBATCHSIZE}
       - DATABASE__HOST=${DATABASE__HOST}
       - DATABASE__PORT=${DATABASE__PORT}
-      - DATABASE__NAME=${DATABASE__NAME}
-      - DATABASE__USERNAME=${DATABASE__USERNAME}
+      - DATABASE__DBNAME=${DATABASE__DBNAME}
+      - DATABASE__USER=${DATABASE__USER}
       - DATABASE__PASSWORD=${DATABASE__PASSWORD}
       - DATABASE__CONNMAXLIFETIME=${DATABASE__CONNMAXLIFETIME}
       - DATABASE__MAXIDLECONNS=${DATABASE__MAXIDLECONNS}
