chore: add default bridge stats configuration
Viper only overrides the configuration with environment variable when that
configuration is in config file. This commit adds the default bridge stats
configuration to config file.

--- a/config/config.mainnet.json
+++ b/config/config.mainnet.json
@@ -30,6 +30,11 @@
         "Governance": "0x946397deDFd2f79b75a72B322944a21C3240c9c3",
         "TrustedOrganization": "0x98D0230884448B3E2f09a177433D60fb1E19C090"
       },
+      "stats": {
+        "node": "",
+        "host": "",
+        "secret": ""
+      },
       "subscriptions": {
         "MainchainWithdrewSubscription": {
           "to": "0x0CF8fF40a508bdBc39fBe1Bb679dCBa64E65C7Df",
