--- a/config/config.testnet.yaml
+++ b/config/config.testnet.yaml
@@ -18,6 +18,10 @@ listeners:
         plainPrivateKey: ""
     fromHeight: 8010875
     processWithinBlocks: 864000
+    stats:
+      node: ""
+      host: ""
+      secret: ""
     contracts:
       Gateway: "0xCee681C9108c42C710c6A8A949307D5F13C9F3ca"
       EthGateway: "0x9e359F42cDDc84A386a2Ef1D9Ae06623f3970D1D"
